--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
-    <link rel="stylesheet" href="assets/styles.css"/>
-</head>
-<body class="bg-gray-100">
-    <h1 class="text-center text-gray-900 text-2xl">Hello World</h1>
-</body>
-</html>
+---
+layout: layouts/base.liquid
+title: Home Page
+---
+
+<h1 class="text-center text-gray-900 text-2xl">{{title}}</h1>
